--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "author": "Ranjan",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "start":"node server/server.js",
-    "heroku-postbuild":"yarn run build:prod" 
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -25,8 +24,6 @@
     "express": "4.16.0",
     "extract-text-webpack-plugin": "3.0.0",
     "heroku": "^7.18.5",
-    "jest": "20.0.4",
-    "live-server": "^1.2.0",
     "moment": "2.19.3",
     "node-sass": "^4.9.3",
     "normalize.css": "7.0.0",
@@ -42,7 +39,10 @@
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
+    "webpack": "3.1.0"
+  },
+  "devDependencies": {
+    "jest": "20.0.4",
     "webpack-dev-server": "2.5.1"
   }
 }
